[package]
name = "eco"
version = "0.1.0"
edition = "2021"
description = "Conversion between event formats"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
license = "GPL-3.0-or-later"
keywords = ["physics"]
categories = ["science"]
repository = "https://github.com/a-maier/eco"

[dependencies]
anyhow = "1.0"
audec = { version = "0.1", default-features = false }
avery = { version = "0.3", default-features = false }
clap = { version = "4.3", features = ["derive"] }
hepmc2 = { version = "0.5", optional = true }
lhef = { version = "0.6", optional = true }
ntuple = { version = "0.7", optional = true }

[build-dependencies]
ntuple = { version = "0.7", optional = true }

[features]
default = ["hepmc2", "flate2", "lhef", "zstd"]
hepmc2 = ["dep:hepmc2", "avery/hepmc2"]
lhef = ["dep:lhef", "avery/lhef"]
ntuple = ["dep:ntuple", "avery/ntuple"]
bzip2 = ["audec/bzip2"]
lz4 = ["audec/lz4"]
lz4_flex = ["audec/lz4_flex"]
flate2 = ["audec/flate2"]
zstd = ["audec/zstd"]
all = ["bzip2", "lz4_flex", "ntuple"]
