[package]
name = "eco"
version = "0.3.1"
edition = "2021"
description = "Conversion between event formats"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
license = "GPL-3.0-or-later"
keywords = ["physics"]
categories = ["science"]
repository = "https://github.com/a-maier/eco"

[dependencies]
anyhow = "1.0"
avery = { version = "0.7", default-features = false }
clap = { version = "4.5", features = ["derive"] }
event-file-reader = { version = "0.4", default-features = false }
hepmc2 = { version = "0.7", optional = true }
lhef = { version = "0.6", optional = true }
ntuple = { version = "0.9", optional = true }

[build-dependencies]
anyhow = "1.0"

[features]
default = ["hepmc2", "flate2", "lhef", "zstd"]
hepmc2 = ["dep:hepmc2", "avery/hepmc2", "event-file-reader/hepmc2"]
lhef = ["dep:lhef", "avery/lhef", "event-file-reader/lhef"]
ntuple = ["dep:ntuple", "avery/ntuple", "event-file-reader/ntuple"]
bzip2 = ["event-file-reader/bzip2"]
lz4 = ["event-file-reader/lz4"]
lz4_flex = ["event-file-reader/lz4_flex"]
flate2 = ["event-file-reader/flate2"]
zstd = ["event-file-reader/zstd"]
all = ["bzip2", "lz4_flex", "ntuple"]
